Correcting overflow error on background.

--- a/components/Background.module.scss
+++ b/components/Background.module.scss
@@ -25,6 +25,15 @@
   z-index: -2;
 }
 
+.container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -2;
+}
+
 .overlay {
   position: fixed;
   top: 0;
